# graphloom

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml
crates/graphloom/: Cargo.toml
crates/graphloom-cache/: Cargo.toml
crates/graphloom-cache/src/: error.rs  json.rs  lib.rs  memory.rs
crates/graphloom-chunking/: Cargo.toml
crates/graphloom-chunking/src/: chunker.rs  config.rs  encoding.rs  error.rs  lib.rs  semantic_text_chunker.rs  tests.rs  text_chunk.rs  tiktoken.rs  token_chunker.rs  transformers.rs
crates/graphloom-cli/: Cargo.toml
crates/graphloom-cli/src/: args.rs  callbacks.rs  config.rs  error.rs  index.rs  init.rs  lib.rs  main.rs  project.rs  runtime.rs
crates/graphloom-cli/src/assets/prompts/: community_report_text.txt  extract_graph.txt  global_search_knowledge_system_prompt.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  summarize_descriptions.txt
crates/graphloom-cli/tests/: cli_integration.rs
crates/graphloom-common/: Cargo.toml
crates/graphloom-common/src/: lib.rs
crates/graphloom-input/: Cargo.toml
crates/graphloom-input/src/: document.rs  error.rs  hashing.rs  lib.rs  property.rs  reader.rs  tests.rs  text.rs
crates/graphloom-llm/: Cargo.toml
crates/graphloom-llm/src/: cache_key.rs  error.rs  lib.rs  mock.rs  model.rs  openai.rs  parser.rs  prompt.rs  tests.rs  tokenizer.rs
crates/graphloom-llm/src/middleware/: cached.rs  mod.rs
crates/graphloom-llm/src/types/: completion.rs  embedding.rs  metadata.rs  mod.rs  request.rs  streaming.rs
crates/graphloom-llm/tests/: cache_compat.rs
crates/graphloom-llm/tests/fixtures/graphloom/: completion_cache.json  embedding_cache.json
crates/graphloom-llm/tests/fixtures/graphrag/: README.md  completion_expected_key.txt  completion_request.json  embedding_expected_key.txt  embedding_request.json
crates/graphloom-storage/: Cargo.toml
crates/graphloom-storage/src/: error.rs  lib.rs  path.rs  tests.rs
crates/graphloom-storage/src/storage/: file.rs  memory.rs  mod.rs
crates/graphloom-storage/src/table/: arrow_codec.rs  memory.rs  mod.rs  parquet.rs  parquet_io.rs  schemas.rs
crates/graphloom-vectors/: Cargo.toml
crates/graphloom-vectors/examples/: compat_vector_manifest.rs
crates/graphloom-vectors/src/: config.rs  error.rs  lancedb.rs  lib.rs  store.rs
crates/graphloom-windows-path/: Cargo.toml
crates/graphloom-windows-path/src/: lib.rs
crates/graphloom/src/: callbacks.rs  config.rs  context.rs  dataframe.rs  error.rs  indexing.rs  lib.rs  main.rs  path_safety.rs  pipeline.rs  project.rs  runtime.rs  stats.rs  test_support.rs  tests.rs  workflow.rs
crates/graphloom/src/api/: index.rs  mod.rs  query.rs
crates/graphloom/src/assets/: settings.yaml
crates/graphloom/src/assets/prompts/: basic_search_system_prompt.txt  drift_reduce_prompt.txt  drift_search_system_prompt.txt  extract_claims.txt  local_search_system_prompt.txt  question_gen_system_prompt.txt
crates/graphloom/src/cli/: args.rs  callbacks.rs  error.rs  index.rs  init.rs  mod.rs  query.rs
crates/graphloom/src/cli/init/: transaction.rs
crates/graphloom/src/config/: load.rs  mod.rs  query.rs
crates/graphloom/src/operations/: communities.rs  mod.rs  text_units.rs
crates/graphloom/src/operations/community_reports/: context.rs  extraction.rs  mod.rs  tables.rs  types.rs
crates/graphloom/src/operations/covariates/: mod.rs
crates/graphloom/src/operations/embeddings/: execute.rs  mod.rs  types.rs
crates/graphloom/src/operations/graph/: extraction.rs  finalize.rs  merge.rs  mod.rs  snapshot.rs  summarize.rs  tables.rs  types.rs
crates/graphloom/src/prompts/: catalog.rs  extract_claims.rs  extract_graph.rs  loader.rs  mod.rs  prompt.rs  renderer.rs  repository.rs
crates/graphloom/src/prompts/defaults/: basic_search_system_prompt.txt  community_report.txt  community_report_graph.txt  community_report_text.txt  drift_reduce_prompt.txt  drift_search_system_prompt.txt  extract_claims.txt  extract_claims_continue.txt  extract_claims_loop.txt  extract_graph.txt  extract_graph_loop.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  local_search_system_prompt.txt  question_gen_system_prompt.txt  summarize_descriptions.txt
crates/graphloom/src/query/: callbacks.rs  concurrency.rs  data_index.rs  data_loader.rs  data_model.rs  engine.rs  error.rs  indexer_adapters.rs  mod.rs  requirements.rs  result.rs  runtime.rs  streaming.rs
crates/graphloom/src/query/basic/: context.rs  mod.rs  search.rs
crates/graphloom/src/query/context/: conversation.rs  csv.rs  mod.rs
crates/graphloom/src/query/drift/: action.rs  context.rs  mod.rs  parse.rs  primer.rs  search.rs  state.rs
crates/graphloom/src/query/global/: context.rs  dynamic.rs  mod.rs  parse.rs  random.rs  search.rs
crates/graphloom/src/query/local/: context.rs  mod.rs  search.rs
crates/graphloom/src/runtime/: factory.rs  generation.rs  model_factory.rs  model_registry.rs  services.rs  vector_store_factory.rs
crates/graphloom/src/workflows/: base_text_units.rs  common.rs  communities.rs  community_reports.rs  extract_covariates.rs  extract_graph.rs  final_documents.rs  final_text_units.rs  finalize_graph.rs  generate_text_embeddings.rs  graph.rs  input_documents.rs  mod.rs
crates/graphloom/tests/: api_index.rs  api_query.rs  cli_integration.rs
crates/graphloom/tests/support/: mod.rs
docs/: index.md  (+3 more)
tests/compat/: compat_harness.py  conftest.py  llm_cache_proxy.py  probe_environment.py  pyproject.toml  query_record_replay.py  test_compat.py  test_llm_cache_proxy.py  test_query_compat.py  test_query_interop.py  test_query_record_replay.py  vector_manifest.py
tests/compat/fixtures/: README.md
tests/compat/fixtures/input/: 兄弟相逢.txt  结义.txt
tests/compat/fixtures/query/: drift_hyde_prompt.txt  drift_random_trajectory.json  global_batches.json  local_context.txt  local_special_characters.json  query_cli_contract.json  query_interop_request_contract.json  rate_prompt.txt  report_csv_special_characters.json
(+40 files in other folders)
