[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["wulawulu<wutuobangbang@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
arrow = "59.0.0"
chrono = "0.4.45"
config = { version = "0.15.25", default-features = false, features = ["yaml"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-core = "0.3.31"
futures-util = "0.3.31"
parquet = { version = "59.0.0", default-features = false, features = ["arrow", "snap"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

# workspace crates
graphloom-cache = { path = "crates/graphloom-cache" }
graphloom-chunking = { path = "crates/graphloom-chunking" }
graphloom-common = { path = "crates/graphloom-common" }
graphloom-input = { path = "crates/graphloom-input" }
graphloom-llm = { path = "crates/graphloom-llm" }
graphloom-storage = { path = "crates/graphloom-storage" }
graphloom-vectors = { path = "crates/graphloom-vectors" }
