[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["wulawulu<wutuobangbang@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
async-openai = { version = "0.41.1", default-features = false, features = ["byot", "chat-completion", "embedding", "middleware", "rustls"] }
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
bytes = "1.12.0"
chrono = "0.4.45"
clap = { version = "4.6.1", default-features = true, features = ["derive"] }
config = { version = "0.15.25", default-features = false, features = ["yaml"] }
csv = "1.4.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-core = "0.3.31"
futures-util = "0.3.31"
html-escape = "0.2.14"
lancedb = { version = "0.31.0", default-features = false }
network_partitions = { git = "https://github.com/graspologic-org/graspologic-native.git", rev = "773181488b4e5b81925e302b972b294fd51f61a4", package = "network_partitions" }
polars-core = { version = "0.54.4", default-features = false, features = ["dtype-struct", "rows"] }
polars-io = { version = "0.54.4", default-features = false, features = ["parquet"] }
rand = "0.10.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tera = "1.20.1"
tempfile = "3.23.0"
text-splitter = { version = "0.32.0", features = ["tiktoken-rs"] }
thiserror = "2.0.18"
tiktoken-rs = "0.12.0"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["limit", "timeout"] }
tracing = "0.1.41"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.4", features = ["v4"] }
assert_cmd = "2.2.2"
predicates = "3.1.3"
wiremock = "0.6.5"

# workspace crates
graphloom-cache = { path = "crates/graphloom-cache" }
graphloom-chunking = { path = "crates/graphloom-chunking" }
graphloom-cli = { path = "crates/graphloom-cli" }
graphloom-common = { path = "crates/graphloom-common" }
graphloom = { path = "crates/graphloom" }
graphloom-input = { path = "crates/graphloom-input" }
graphloom-llm = { path = "crates/graphloom-llm" }
graphloom-storage = { path = "crates/graphloom-storage" }
graphloom-vectors = { path = "crates/graphloom-vectors" }
