[package]
name = "graphloom-chunking"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
text-splitter.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
