[package]
name = "graphloom-cli"
description = "GraphLoom command line interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "graphloom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
graphloom.workspace = true
graphloom-cache.workspace = true
graphloom-input.workspace = true
graphloom-llm.workspace = true
graphloom-storage.workspace = true
graphloom-vectors.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true
