[package]
name = "graphloom-llm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
async-openai.workspace = true
async-trait.workspace = true
graphloom-common.workspace = true
html-escape.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tera.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
