[package]
name = "graphloom-llm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
async-openai.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
graphloom-cache.workspace = true
html-escape.workspace = true
regex.workspace = true
serde.workspace = true
secrecy.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
graphloom-storage.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
wiremock.workspace = true
