[package]
name = "graphloom-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-core.workspace = true
futures-util.workspace = true
polars-core.workspace = true
polars-io.workspace = true
polars-parquet.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
