[package]
name = "graphloom-vectors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
futures-util.workspace = true
lancedb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
