[package]
name = "graphloom"
description = """

"""
categories = ["development-tools"]
keywords = []
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
csv.workspace = true
futures-util.workspace = true
graphloom-cache.workspace = true
graphloom-chunking.workspace = true
graphloom-common.workspace = true
graphloom-input.workspace = true
graphloom-llm.workspace = true
graphloom-storage.workspace = true
graphloom-vectors.workspace = true
html-escape.workspace = true
network_partitions.workspace = true
polars-core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
