[package]
name = "graphloom"
description = """

"""
categories = ["development-tools"]
keywords = []
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
dashmap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
graphloom-cache.workspace = true
graphloom-chunking.workspace = true
graphloom-input.workspace = true
graphloom-llm.workspace = true
graphloom-storage.workspace = true
graphloom-vectors.workspace = true
html-escape.workspace = true
indicatif.workspace = true
network_partitions.workspace = true
polars-core.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
regex.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tera.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[[bin]]
name = "graphloom"
path = "src/main.rs"

[dev-dependencies]
assert_cmd.workspace = true
indicatif = { workspace = true, features = ["in_memory"] }
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true
