[project]
name = "graphloom-compat-tests"
version = "0.0.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "graphrag==3.1.0",
    "lancedb==0.24.3",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "pytest==9.1.1",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "ruff==0.15.21",
]

[tool.uv]
package = false
